# email_subscriber_app

./: .env  Cargo.toml  configuration.yaml
migrations/: 20230120141243_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
