[package]
name = "email_subscriber_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
hyper = "0.13.0-alpha.4"
tokio = {version = "1", features = ["full"]}
pretty_env_logger = "0.3.1"
