[package]
name = "email_subscriber_app"
version = "0.1.0"
edition = "2021"
authors = ["Almustapha Wakili <wakili@udel.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "email_subscriber_app"


[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4.2.1"
hyper = "0.13.0-alpha.4"
tokio = {version = "1", features = ["full"]}
pretty_env_logger = "0.3.1"
serde = { version = "1", features = ["derive"]}
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }


# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]